--- a/ui/src/components/table/ListingsTable.less
+++ b/ui/src/components/table/ListingsTable.less
@@ -55,10 +55,11 @@
       color: @color-success;
       display: flex;
       align-items: center;
+      justify-content: flex-end;
       gap: 4px;
       white-space: nowrap;
+      text-align: right;
       font-variant-numeric: tabular-nums;
-      font-feature-settings: 'tnum';
     }
 
     &__address {
